# ros-melodic-python3-opencv4

./: README.md
gazebo_ros_pkgs/gazebo_plugins/src/: gazebo_ros_prosilica.cpp
image_pipeline/image_publisher/src/nodelet/: image_publisher_nodelet.cpp
ros_environment/: CMakeLists.txt  package.xml
ros_environment/env-hooks/: 1.ros_package_path.bat.em
rqt_moveit/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
vision_opencv/cv_bridge/: CMakeLists.txt
vision_opencv/cv_bridge/src/: CMakeLists.txt
xacro/image_pipeline/image_publisher/: CMakeLists.txt
xacro/image_transport_plugins/compressed_depth_image_transport/src/: codec.cpp
xacro/image_transport_plugins/compressed_image_transport/src/: compressed_publisher.cpp
xacro/python_qt_binding/cmake/: sip_configure.py
xacro/ros_environment/env-hooks/: _parent_package_path.py.em
xacro/rosbag_migration_rule/: CMakeLists.txt
xacro/rqt_moveit/src/rqt_moveit/: moveit_widget.py
xacro/stage/: config.h
