<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rqt_moveit</name>
  <version>0.5.10</version>
  <description>
   An rqt-based tool that assists monitoring tasks
   for <a href = "http://ros.org/wiki/moveit">MoveIt!</a> motion planner
   developers and users. Currently the following items are monitored if they
   are either running, existing or published:
   <ul>
   <li>Node: /move_group</li>
   <li>Parameter: [/robot_description, /robot_description_semantic]</li>
   <li>Topic: Following types are monitored. Published "names" are ignored.<br />
       [sensor_msgs/PointCloud, sensor_msgs/PointCloud2,
        sensor_msgs/Image, sensor_msgs/CameraInfo]</li>
   </ul>
   Since this package is not made by the MoveIt! development team (although with
   assistance from the them), please post issue reports to the designated
   tracker (not MoveIt!'s main tracker).
  </description>

  <maintainer email="iisaito@kinugarage.com">Isaac I.Y. Saito</maintainer>
  <maintainer email="arne.hitzmann@gmail.com">Arne Hitzmann</maintainer>
  <author>Isaac Saito</author>

  <license>BSD</license>
  <url type="website">http://wiki.ros.org/rqt_moveit</url>
  <url type="repository">https://github.com/ros-visualization/rqt_moveit</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_moveit/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <exec_depend version_gte="0.2.19">python_qt_binding</exec_depend>
  <exec_depend>rosnode</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>rqt_py_common</exec_depend>
  <exec_depend>rqt_topic</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml" />
  </export>
</package>
